fix: fixed social card info alignment

--- a/portfolio/src/assets/styles/socialCard.css
+++ b/portfolio/src/assets/styles/socialCard.css
@@ -12,38 +12,31 @@
   transition: box-shadow 0.3s ease-in-out;
 }
 
-.social-card span {
+#info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.social-card #info span {
   font-size: small;
   color: gray;
 }
 
-.social-card:hover {
-  box-shadow: 4px 4px 10px rgba(0,0,0,0.2);
+.social-card #info p {
+  margin-bottom: 0;
+  font-size: medium;
 }
 
-.social-logo {
+#social-logo {
   background: var(--secondary-text);
   color: #000;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 1.2rem;
 }
 
-.social-card h3 {
-  color: var(--primary);
-  text-align: center;
-  font-size: small;
-}
-
-.social-card a {
-  font-size: x-small;
-  color: rgba(128, 128, 128, 1);
-}
-
-.social-card:hover a {
-  color: var(--secondary-text);
-  transition: all 0.3s;
-}
